# package-bot

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.yml  jira-mcp-folder-structure  objective.md  planner-agent_output.md  pyproject.toml  summary.md  vulnerability-object-example.md  worker-example.md  worker.py  workflow-example.md
app/: config.py  main.py
app/activities/: build__alerts_object.py  execute_agent_activity.py  execute_dependency_remediation_activity.py  execute_jira_ticket_activity.py  execute_pull_request_activity.py  fetch_dependabot_alerts.py  load_remediation_plan.py
app/agents/: __init__.py  remediation_agent.py
dependabot-remediation-plan/: remediation-plan.json
docs/: flow-diagram.md
jira-mcp/: .env.example  .gitignore  README.md  pyproject.toml
jira-mcp/docker/: Dockerfile  docker-compose.yml
jira-mcp/scripts/: health_check.py  run_local.sh
jira-mcp/src/jira_mcp/: __init__.py  __main__.py  lifespan.py  server.py  settings.py
jira-mcp/src/jira_mcp/guards/: __init__.py  permissions.py  rate_limit.py  read_only.py
jira-mcp/src/jira_mcp/jira/: __init__.py  adf.py  client.py  errors.py  models.py
jira-mcp/src/jira_mcp/logging/: __init__.py  logger.py
jira-mcp/src/jira_mcp/tools/: __init__.py  comments.py  issues.py  projects.py  search.py  transitions.py
jira-mcp/src/jira_mcp/utils/: retry.py  timing.py
jira-mcp/tests/: conftest.py
jira-mcp/tests/integration/: test_mcp_stdio.py
jira-mcp/tests/unit/: test_guards.py  test_jira_client.py  test_tools_search.py
(+67 files in other folders)
